--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+:root{
+  --primary: #2175f5;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -134,4 +138,14 @@ body {
   line-height: .9;
   color: #fff;
   opacity: .1;
+}
+
+.info{
+  width: 50%;
+  background-color: #fff;
+  z-index: 1;
+  padding: 35px 40px;
+  box-shadow: 15px 0 35px rgba(0, 0, 0, 0.1),
+  0 -15px 35px rgba(0, 0, 0, 0.1),
+  0 15px 35px rgba(0, 0, 0, 0.1);
 }
